--- a/generators/app/templates/index.html
+++ b/generators/app/templates/index.html
@@ -5,14 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <meta name="description" content="eXtra Small SPA">
+  <meta name="description" content="<%= description %>">
   <meta name="keywords" content="HTML,CSS,JS">
-  <meta name="author" content="amimaro">
-  <title>XS-SPA</title>
+  <title><%= name %></title>
 </head>
 
 <body>
-  <h1>xs-spa</h1>
+  <h1><%= name %></h1>
   <a href="#">Home</a>
   <a href="#about">About</a>
   <div id="root"></div>
